--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="logo"><img id="logo" src="./Icon.svg" alt=""></div>
         <input type="checkbox" id="toggler">
         <label for="toggler">
-            <img src="./hambu-menu.svg" class="hambu-menu" alt="">
+            <img src="./hambu-menu.svg" alt="">
         </label>
         <div class="menu">
             <ul class="list">
