--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav class="navbar">
-        <div class="logo"><img id="logo" src="./Icon.svg" alt=""></div>
+        <a class="logo" href="#header"><img id="logo" src="./Icon.svg" alt=""></a>
         <div class="menu">
             <ul class="list">
                 <li><a href="#header">Home</a></li>
@@ -85,9 +85,8 @@
                         <div class="title-hs">Amet, consectetur adipiscing elit, sed do eiusmod </div>
                     </div>
                     <div class="section-img">
-
                         <div class="back-img">
-                            <img src="./img16.JPG" class="el1">
+                            <img src="./img22.JPG" class="el1">
                         </div>
                     </div>
 
@@ -102,7 +101,7 @@
                     <div class="section-img">
 
                         <div class="back-img">
-                            <img src="./img16.JPG" class="el1">
+                            <img src="./img33.JPG" class="el1">
                         </div>
                     </div>
 
@@ -117,7 +116,7 @@
                     <div class="section-img">
 
                         <div class="back-img">
-                            <img src="./img16.JPG" class="el1">
+                            <img src="./img41.JPG" class="el1">
                         </div>
                     </div>
 
@@ -163,22 +162,19 @@
     <!--Mobile version-->
     <div class="container-mobile">
         <a href="" data-lightbox="homePortfolio" class="vertical">
-            <img src="./img16.JPG">
-        </a>
-        <a href="" data-lightbox="homePortfolio" class="horizontal">
-            <img src="./img16.JPG">
+            <img src="./img22.JPG">
         </a>
         <a href="" data-lightbox="homePortfolio" class="big">
-            <img src="./img16.JPG">
+            <img src="./img33.JPG">
         </a>
         <a href="" data-lightbox="homePortfolio" class="vertical">
-            <img src="./img16.JPG">
+            <img src="./img41.JPG">
         </a>
         <a href="" data-lightbox="homePortfolio" class="horizontal">
-            <img src="./img16.JPG">
+            <img src="./img12.JPG">
         </a>
         <a href="" data-lightbox="homePortfolio" class="big">
-            <img src="./img16.JPG">
+            <img src="./img35.JPG">
         </a>
     </div>
 
