--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
                         <div class="title-hs-big">ASSEMBLAGGI</div>
                         <div class="title-hs">Amet, consectetur adipiscing elit, sed do eiusmod </div>
                     </div>
-                    <div class="section-img">
+                    <div class="section-img el1">
                         <div class="back-img">
-                            <img src="./img22.JPG" class="el1">
+                            <img src="./img42.JPG" class="el1">
                         </div>
                     </div>
 
@@ -98,10 +98,10 @@
                         <div class="title-hs-big">ASSEMBLAGGI</div>
                         <div class="title-hs">Amet, consectetur adipiscing elit, sed do eiusmod </div>
                     </div>
-                    <div class="section-img">
+                    <div class="section-img el2">
 
                         <div class="back-img">
-                            <img src="./img33.JPG" class="el1">
+                            <img src="./img33.JPG" class="el2">
                         </div>
                     </div>
 
@@ -113,10 +113,10 @@
                         <div class="title-hs-big">ASSEMBLAGGI</div>
                         <div class="title-hs">Amet, consectetur adipiscing elit, sed do eiusmod </div>
                     </div>
-                    <div class="section-img">
+                    <div class="section-img el3">
 
                         <div class="back-img">
-                            <img src="./img41.JPG" class="el1">
+                            <img src="./img41.JPG" class="el3">
                         </div>
                     </div>
 
@@ -128,10 +128,10 @@
                         <div class="title-hs-big">ASSEMBLAGGI</div>
                         <div class="title-hs">Amet, consectetur adipiscing elit, sed do eiusmod </div>
                     </div>
-                    <div class="section-img">
+                    <div class="section-img el3">
 
                         <div class="back-img">
-                            <img src="./img16.JPG" class="el1">
+                            <img src="./img35.JPG" class="el3">
                         </div>
                     </div>
 
@@ -143,10 +143,55 @@
                         <div class="title-hs-big">ASSEMBLAGGI</div>
                         <div class="title-hs">Amet, consectetur adipiscing elit, sed do eiusmod </div>
                     </div>
-                    <div class="section-img">
+                    <div class="section-img el4">
 
                         <div class="back-img">
-                            <img src="./img16.JPG" class="el1">
+                            <img src="./img12.JPG" class="el4">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="wrapper-item">
+                <div id="area" class="container absolute-down">
+                    <div class="section">
+                        <div class="title-hs-big">ASSEMBLAGGI</div>
+                        <div class="title-hs">Amet, consectetur adipiscing elit, sed do eiusmod </div>
+                    </div>
+                    <div class="section-img el5">
+
+                        <div class="back-img">
+                            <img src="./img16.JPG" class="el5">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="wrapper-item">
+                <div id="area" class="container absolute-up">
+                    <div class="section">
+                        <div class="title-hs-big">ASSEMBLAGGI</div>
+                        <div class="title-hs">Amet, consectetur adipiscing elit, sed do eiusmod </div>
+                    </div>
+                    <div class="section-img el5">
+
+                        <div class="back-img">
+                            <img src="./img51.JPG" class="el5">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="wrapper-item">
+                <div id="area" class="container absolute-down">
+                    <div class="section">
+                        <div class="title-hs-big">ASSEMBLAGGI</div>
+                        <div class="title-hs">Amet, consectetur adipiscing elit, sed do eiusmod </div>
+                    </div>
+                    <div class="section-img el6">
+
+                        <div class="back-img">
+                            <img src="./img22.JPG" class="el6">
                         </div>
                     </div>
 
