--- a/index.html
+++ b/index.html
@@ -265,16 +265,15 @@
                 <div class="element-left">
                     <img class="element-logo" src="./setting2.svg" alt="">
                 </div>
-                <div class="element-right">
+                <div class="element-right borderplus">
                     <div class="element-title">Lorem Ipsum is simply dummy</div>
                     <div class="element-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         <br>Lorem Ipsum has been the
-                        industry's standard dummy text ever since the 1500s when an unknown printer took a galley of
-                        type and
-                        scrambled it to make a type specimenbook. <br>
+                        industry's standard dummy text ever since the 1500s when an unknown 
                         <div class="remove-text">
-                            Lorem Ipsum passages, and more recently with desktop publishing software like
-                            Aldus PageMaker including versions of Lorem Ipsum.</div>    
+                        printer took a galley of type and scrambled it to make a type specimenbook. <br>
+                        Lorem Ipsum passages, and more recently with desktop publishing software like
+                        Aldus PageMaker including versions of Lorem Ipsum.</div>    
                         </div>
                         </div>
 
@@ -330,7 +329,13 @@
         </div>
     </div>
     <div class="bottom-footer">
-        mail@gmail.com
+        <div class="sec1">
+            Savino Rosella S.R.L. P.IVA IT08391263982 mail@gmail.com
+        </div>
+        <div class="sec2">
+            PRIVACY POLICY - COOKIES POLICY 
+        </div>
+        
     </div>
 
 
