--- a/index.html
+++ b/index.html
@@ -329,10 +329,13 @@
         </div>
     </div>
     <div class="bottom-footer">
-        <div class="sec1">
-            Savino Rosella S.R.L. P.IVA IT08391263982 mail@gmail.com
+        <div>
+            Savino Rosella S.R.L. P.IVA IT08391263982 
         </div>
-        <div class="sec2">
+        <div>
+            mail@gmail.com
+        </div>
+        <div>
             PRIVACY POLICY - COOKIES POLICY 
         </div>
         
