--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
                         <div class="title-hs-big">ASSEMBLAGGI</div>
                         <div class="title-hs">Amet, consectetur adipiscing elit, sed do eiusmod </div>
                     </div>
-                    <div class="section-img el5">
+                    <div class="section-img el6">
 
                         <div class="back-img">
-                            <img src="./img51.JPG" class="el5">
+                            <img src="./img51.JPG" class="el6">
                         </div>
                     </div>
 
@@ -188,10 +188,10 @@
                         <div class="title-hs-big">ASSEMBLAGGI</div>
                         <div class="title-hs">Amet, consectetur adipiscing elit, sed do eiusmod </div>
                     </div>
-                    <div class="section-img el6">
+                    <div class="section-img el7">
 
                         <div class="back-img">
-                            <img src="./img22.JPG" class="el6">
+                            <img src="./img22.JPG" class="el7">
                         </div>
                     </div>
 
@@ -329,13 +329,13 @@
         </div>
     </div>
     <div class="bottom-footer">
-        <div>
+        <div class="padding-sample">
             Savino Rosella S.R.L. P.IVA IT08391263982 
-        </div>
-        <div>
+        </div >
+        <div class="padding-sample">
             mail@gmail.com
         </div>
-        <div>
+        <div class="padding-sample">
             PRIVACY POLICY - COOKIES POLICY 
         </div>
         
