--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                 <div class="arrow"></div>
             </a>
         </div>
+
+        <div class="scroll-down">
+            SCROLL DOWN
+        </div>
     </div>
 
     <div class="postvideo" id="post-video">
@@ -128,10 +132,10 @@
                         <div class="title-hs-big">ASSEMBLAGGI</div>
                         <div class="title-hs">Amet, consectetur adipiscing elit, sed do eiusmod </div>
                     </div>
-                    <div class="section-img el3">
+                    <div class="section-img el4">
 
                         <div class="back-img">
-                            <img src="./img35.JPG" class="el3">
+                            <img src="./img35.JPG" class="el4">
                         </div>
                     </div>
 
@@ -143,10 +147,10 @@
                         <div class="title-hs-big">ASSEMBLAGGI</div>
                         <div class="title-hs">Amet, consectetur adipiscing elit, sed do eiusmod </div>
                     </div>
-                    <div class="section-img el4">
+                    <div class="section-img el5">
 
                         <div class="back-img">
-                            <img src="./img12.JPG" class="el4">
+                            <img src="./img12.JPG" class="el5">
                         </div>
                     </div>
 
@@ -158,10 +162,10 @@
                         <div class="title-hs-big">ASSEMBLAGGI</div>
                         <div class="title-hs">Amet, consectetur adipiscing elit, sed do eiusmod </div>
                     </div>
-                    <div class="section-img el5">
+                    <div class="section-img el6">
 
                         <div class="back-img">
-                            <img src="./img16.JPG" class="el5">
+                            <img src="./img16.JPG" class="el6">
                         </div>
                     </div>
 
@@ -173,10 +177,10 @@
                         <div class="title-hs-big">ASSEMBLAGGI</div>
                         <div class="title-hs">Amet, consectetur adipiscing elit, sed do eiusmod </div>
                     </div>
-                    <div class="section-img el6">
+                    <div class="section-img el7">
 
                         <div class="back-img">
-                            <img src="./img51.JPG" class="el6">
+                            <img src="./img51.JPG" class="el7">
                         </div>
                     </div>
 
@@ -187,6 +191,8 @@
         <div class="hs-arrow">
             <img src="./arrow.svg">
         </div>
+
+        
     </div>
 
     <!--Mobile version-->
