--- a/index.html
+++ b/index.html
@@ -302,9 +302,9 @@
         </div>
         <div class="container-item-ps">
             <div class="item-container">
-                <img class="top-central" src="./top_oggetto.png">
-                <img class="central" src="./oggetto.png">
-                <img class="bottom-central" src="./bottom_oggetto.png">
+                <img class="top-central" src="./top_oggetto.png" id="obj-top">
+                <img class="central" src="./oggetto.png" id="obj-central">
+                <img class="bottom-central" src="./bottom_oggetto.png" id="obj-bottom">
             </div>
             
         </div>
