--- a/index.html
+++ b/index.html
@@ -301,11 +301,23 @@
             </div>
         </div>
         <div class="container-item-ps">
+            <div class="mobile-arrow">
+                <img src="./arrow-item.svg">
+            </div>
+            <div class="text-arrow">Lorem ipsum</div>
+            <div class="text-arrow-line">Lorem ipsum</div>
             <div class="item-container">
+                
                 <img class="top-central" src="./top_oggetto.png" id="obj-top">
                 <img class="central" src="./oggetto.png" id="obj-central">
                 <img class="bottom-central" src="./bottom_oggetto.png" id="obj-bottom">
             </div>
+
+            <div class="mobile-arrow-second">
+                <img src="./arrow-item.svg">
+            </div>
+            <div class="text-arrow-second">Lorem ipsum</div>
+            <div class="text-arrow-line-second">Lorem ipsum</div>
             
         </div>
 
