--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
         </div>
         
         <div class="hs-arrow">
+            <div class="text-hs-arrow">HORIZZONTAL SCROLL</div>
             <img src="./arrow.svg">
         </div>
 
