--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tester2</title>
+    <meta name="description" content="testo di descrizione"/>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -307,7 +308,7 @@
             </div>
             <div class="text-arrow">Lorem ipsum</div>
             <div class="text-arrow-line">Lorem ipsum</div>
-            
+
             <div class="item-container"> 
                 <img class="top-central" src="./top_oggetto.png" id="obj-top">
                 <img class="central" src="./oggetto.png" id="obj-central">
