--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar">
-        <a class="logo" href="#header"><img id="logo" src="./Icon.svg" alt=""></a>
+        <a class="logo" href="#header"><img id="logo" src="./Risorsa 17.svg" alt=""></a>
         <div class="menu">
             <ul class="list">
                 <li><a href="#header">Home</a></li>
