--- a/index.html
+++ b/index.html
@@ -313,10 +313,11 @@
             <div class="text-arrow">Lorem ipsum</div>
             <div class="text-arrow-line">Lorem ipsum</div>
 
+            
             <div class="item-container"> 
-                <img class="top-central" src="./top_oggetto.png" id="obj-top">
+                <img class="top-central" src="./bottom_oggetto.png" id="obj-top">
                 <img class="central" src="./oggetto.png" id="obj-central">
-                <img class="bottom-central" src="./bottom_oggetto.png" id="obj-bottom">
+                <img class="bottom-central" src="./top_oggetto.png" id="obj-bottom">
             </div>
 
             <div class="mobile-arrow-second">
