--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         </div>
     </div>
     <div class="maps-container">
-        <img src="/iconmap.svg">
+        <img src="./iconmap.svg">
         <div class="maps-text">Via Manzoni 3 MB Italia</div>
     </div>
     <div class="bottom-footer">
